tests/invalid/runtime/io_utf8_invalid.pts
import Io;

function main() : void {
    var f = Io.openBinary("io_utf8_bad.bin", "w");
    list<byte> data = [0xC3.toByte(), 0x28.toByte()];
    f.write(data);
    f.close();

    var r = Io.openText("io_utf8_bad.bin", "r");
    r.read(1);
}
